parser/kernalex_before.output
State 212 conflicts: 1 shift/reduce
State 312 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: TOK_IDENTIFIER
    2                   | constant
    3                   | string
    4                   | TOK_TRUE
    5                   | TOK_FALSE
    6                   | TOK_LPAREN expression TOK_RPAREN

    7 constant: TOK_INTEGER
    8         | TOK_FLOAT_LIT
    9         | TOK_CHAR_LIT

   10 string: TOK_STRING_LIT

   11 postfix_expression: primary_expression
   12                   | postfix_expression TOK_LBRACKET expression TOK_RBRACKET
   13                   | postfix_expression TOK_LPAREN TOK_RPAREN
   14                   | postfix_expression TOK_LPAREN argument_expression_list TOK_RPAREN
   15                   | postfix_expression TOK_DOT TOK_IDENTIFIER
   16                   | postfix_expression TOK_ARROW TOK_IDENTIFIER
   17                   | postfix_expression TOK_INC
   18                   | postfix_expression TOK_DEC
   19                   | TOK_LPAREN type_name TOK_RPAREN TOK_BEGIN initializer_list TOK_END
   20                   | TOK_LPAREN type_name TOK_RPAREN TOK_BEGIN initializer_list TOK_COMMA TOK_END

   21 argument_expression_list: assignment_expression
   22                         | argument_expression_list TOK_COMMA assignment_expression

   23 unary_expression: postfix_expression
   24                 | TOK_INC unary_expression
   25                 | TOK_DEC unary_expression
   26                 | unary_operator cast_expression
   27                 | TOK_SIZEOF unary_expression
   28                 | TOK_SIZEOF TOK_LPAREN type_name TOK_RPAREN

   29 unary_operator: TOK_AMP
   30               | TOK_STAR
   31               | TOK_PLUS
   32               | TOK_MINUS
   33               | TOK_BITNOT
   34               | TOK_NOT

   35 cast_expression: unary_expression
   36                | TOK_LPAREN type_name TOK_RPAREN cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression TOK_MULT cast_expression
   39                          | multiplicative_expression TOK_DIV cast_expression
   40                          | multiplicative_expression TOK_MOD cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression TOK_PLUS multiplicative_expression
   43                    | additive_expression TOK_MINUS multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression TOK_LSHIFT additive_expression
   46                 | shift_expression TOK_RSHIFT additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression TOK_LT shift_expression
   49                      | relational_expression TOK_GT shift_expression
   50                      | relational_expression TOK_LE shift_expression
   51                      | relational_expression TOK_GE shift_expression
   52                      | relational_expression TOK_SPACESHIP shift_expression

   53 equality_expression: relational_expression
   54                    | equality_expression TOK_EQ relational_expression
   55                    | equality_expression TOK_NE relational_expression

   56 and_expression: equality_expression
   57               | and_expression TOK_AMP equality_expression

   58 exclusive_or_expression: and_expression
   59                        | exclusive_or_expression TOK_XOR and_expression

   60 inclusive_or_expression: exclusive_or_expression
   61                        | inclusive_or_expression TOK_BITOR exclusive_or_expression

   62 logical_and_expression: inclusive_or_expression
   63                       | logical_and_expression TOK_AND inclusive_or_expression

   64 logical_or_expression: logical_and_expression
   65                      | logical_or_expression TOK_OR logical_and_expression

   66 conditional_expression: logical_or_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: TOK_ASSIGN
   70                    | TOK_MULTEQ
   71                    | TOK_DIVEQ
   72                    | TOK_MODEQ
   73                    | TOK_PLUSEQ
   74                    | TOK_MINUSEQ

   75 expression: assignment_expression
   76           | expression TOK_COMMA assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers TOK_SEMICOLON
   79            | declaration_specifiers init_declarator_list TOK_SEMICOLON

   80 declaration_specifiers: storage_class_specifier declaration_specifiers
   81                       | storage_class_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_specifier

   84 init_declarator_list: init_declarator
   85                     | init_declarator_list TOK_COMMA init_declarator

   86 init_declarator: declarator TOK_ASSIGN initializer
   87                | declarator

   88 storage_class_specifier: TOK_EXTERN
   89                        | TOK_STATIC

   90 type_specifier: TOK_VOID
   91               | TOK_CHAR
   92               | TOK_SHORT
   93               | TOK_INT
   94               | TOK_FLOAT
   95               | TOK_BOOL
   96               | TOK_BOOLEAN
   97               | TOK_INT8_T
   98               | TOK_INT16_T
   99               | TOK_INT32_T
  100               | TOK_INT64_T
  101               | TOK_SIGNED
  102               | TOK_UNSIGNED
  103               | struct_specifier

  104 struct_specifier: TOK_STRUCT TOK_IDENTIFIER TOK_BEGIN struct_declaration_list TOK_END
  105                 | TOK_STRUCT TOK_IDENTIFIER

  106 struct_declaration_list: struct_declaration
  107                        | struct_declaration_list struct_declaration

  108 struct_declaration: specifier_qualifier_list TOK_SEMICOLON
  109                   | specifier_qualifier_list struct_declarator_list TOK_SEMICOLON

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list
  111                         | type_specifier

  112 struct_declarator_list: struct_declarator
  113                       | struct_declarator_list TOK_COMMA struct_declarator

  114 struct_declarator: TOK_COLON constant_expression
  115                  | declarator TOK_COLON constant_expression
  116                  | declarator

  117 $@1: ε

  118 declarator: pointer $@1 direct_declarator
  119           | direct_declarator

  120 direct_declarator: TOK_IDENTIFIER
  121                  | TOK_LPAREN declarator TOK_RPAREN
  122                  | direct_declarator TOK_LBRACKET TOK_RBRACKET
  123                  | direct_declarator TOK_LBRACKET assignment_expression TOK_RBRACKET
  124                  | direct_declarator TOK_LPAREN parameter_type_list TOK_RPAREN
  125                  | direct_declarator TOK_LPAREN TOK_RPAREN
  126                  | direct_declarator TOK_LPAREN identifier_list TOK_RPAREN

  127 pointer: TOK_STAR pointer
  128        | TOK_STAR

  129 parameter_type_list: parameter_list

  130 parameter_list: parameter_declaration
  131               | parameter_list TOK_COMMA parameter_declaration

  132 parameter_declaration: declaration_specifiers declarator
  133                      | declaration_specifiers abstract_declarator
  134                      | declaration_specifiers

  135 identifier_list: TOK_IDENTIFIER
  136                | identifier_list TOK_COMMA TOK_IDENTIFIER

  137 type_name: specifier_qualifier_list abstract_declarator
  138          | specifier_qualifier_list

  139 abstract_declarator: pointer direct_abstract_declarator
  140                    | pointer
  141                    | direct_abstract_declarator

  142 direct_abstract_declarator: TOK_LPAREN abstract_declarator TOK_RPAREN
  143                           | TOK_LBRACKET TOK_RBRACKET
  144                           | TOK_LBRACKET assignment_expression TOK_RBRACKET
  145                           | direct_abstract_declarator TOK_LBRACKET TOK_RBRACKET
  146                           | direct_abstract_declarator TOK_LBRACKET assignment_expression TOK_RBRACKET
  147                           | TOK_LPAREN TOK_RPAREN
  148                           | TOK_LPAREN parameter_type_list TOK_RPAREN
  149                           | direct_abstract_declarator TOK_LPAREN TOK_RPAREN
  150                           | direct_abstract_declarator TOK_LPAREN parameter_type_list TOK_RPAREN

  151 initializer: TOK_BEGIN initializer_list TOK_END
  152            | TOK_BEGIN initializer_list TOK_COMMA TOK_END
  153            | assignment_expression

  154 initializer_list: designation initializer
  155                 | initializer
  156                 | initializer_list TOK_COMMA designation initializer
  157                 | initializer_list TOK_COMMA initializer

  158 designation: designator_list TOK_ASSIGN

  159 designator_list: designator
  160                | designator_list designator

  161 designator: TOK_LBRACKET constant_expression TOK_RBRACKET
  162           | TOK_DOT TOK_IDENTIFIER

  163 statement: labeled_statement
  164          | compound_statement
  165          | expression_statement
  166          | selection_statement
  167          | iteration_statement
  168          | jump_statement

  169 labeled_statement: TOK_IDENTIFIER TOK_COLON statement
  170                  | TOK_CASE constant_expression TOK_COLON statement
  171                  | TOK_DEFAULT TOK_COLON statement

  172 compound_statement: TOK_BEGIN TOK_END
  173                   | TOK_BEGIN block_item_list TOK_END

  174 block_item_list: block_item
  175                | block_item_list block_item

  176 block_item: declaration
  177           | statement

  178 expression_statement: TOK_SEMICOLON
  179                     | expression TOK_SEMICOLON

  180 selection_statement: TOK_IF TOK_LPAREN expression TOK_RPAREN statement TOK_ELSE statement
  181                    | TOK_IF TOK_LPAREN expression TOK_RPAREN statement
  182                    | TOK_SWITCH TOK_LPAREN expression TOK_RPAREN statement

  183 iteration_statement: TOK_WHILE TOK_LPAREN expression TOK_RPAREN statement
  184                    | TOK_REPEAT statement TOK_UNTIL TOK_LPAREN expression TOK_RPAREN TOK_SEMICOLON
  185                    | TOK_FOR TOK_LPAREN expression_statement expression_statement TOK_RPAREN statement
  186                    | TOK_FOR TOK_LPAREN expression_statement expression_statement expression TOK_RPAREN statement
  187                    | TOK_FOR TOK_LPAREN declaration expression_statement TOK_RPAREN statement
  188                    | TOK_FOR TOK_LPAREN declaration expression_statement expression TOK_RPAREN statement

  189 jump_statement: TOK_CONTINUE TOK_SEMICOLON
  190               | TOK_BREAK TOK_SEMICOLON
  191               | TOK_RETURN TOK_SEMICOLON
  192               | TOK_RETURN expression TOK_SEMICOLON

  193 translation_unit: external_declaration
  194                 | translation_unit external_declaration

  195 external_declaration: function_definition
  196                     | declaration

  197 function_definition: declaration_specifiers declarator declaration_list compound_statement
  198                    | declaration_specifiers declarator compound_statement

  199 declaration_list: declaration
  200                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    TOK_INT (1) 93
    TOK_SHORT (2) 92
    TOK_FLOAT (3) 94
    TOK_CHAR (4) 91
    TOK_VOID (5) 90
    TOK_BOOL (6) 95
    TOK_BOOLEAN (7) 96
    TOK_STRUCT (8) 104 105
    TOK_INT8_T (9) 97
    TOK_INT16_T (10) 98
    TOK_INT32_T (11) 99
    TOK_INT64_T (12) 100
    TOK_SIGNED (13) 101
    TOK_UNSIGNED (14) 102
    TOK_EXTERN (15) 88
    TOK_STATIC (16) 89
    TOK_IF <val> (17) 180 181
    TOK_ELSE <val> (18) 180
    TOK_FOR (19) 185 186 187 188
    TOK_WHILE (20) 183
    TOK_REPEAT (21) 184
    TOK_UNTIL (22) 184
    TOK_SWITCH (23) 182
    TOK_CASE (24) 170
    TOK_DEFAULT (25) 171
    TOK_BREAK (26) 190
    TOK_CONTINUE (27) 189
    TOK_RETURN (28) 191 192
    TOK_SIZEOF (29) 27 28
    TOK_BEGIN (30) 19 20 104 151 152 172 173
    TOK_END (31) 19 20 104 151 152 172 173
    TOK_TRUE (32) 4
    TOK_FALSE (33) 5
    TOK_IDENTIFIER (34) 1 15 16 104 105 120 135 136 162 169
    TOK_INTEGER (35) 7
    TOK_FLOAT_LIT (36) 8
    TOK_CHAR_LIT (37) 9
    TOK_STRING_LIT (38) 10
    TOK_PLUS (39) 31 42
    TOK_MINUS (40) 32 43
    TOK_MULT (41) 38
    TOK_DIV (42) 39
    TOK_MOD (43) 40
    TOK_ASSIGN (44) 69 86 158
    TOK_EQ (45) 54
    TOK_NE (46) 55
    TOK_LT (47) 48
    TOK_LE (48) 50
    TOK_GT (49) 49
    TOK_GE (50) 51
    TOK_SPACESHIP (51) 52
    TOK_AND (52) 63
    TOK_OR (53) 65
    TOK_NOT (54) 34
    TOK_BITOR (56) 61
    TOK_XOR (57) 59
    TOK_BITNOT (58) 33
    TOK_LSHIFT (59) 45
    TOK_RSHIFT (60) 46
    TOK_INC (61) 17 24
    TOK_DEC (62) 18 25
    TOK_PLUSEQ (63) 73
    TOK_MINUSEQ (64) 74
    TOK_MULTEQ (65) 70
    TOK_DIVEQ (66) 71
    TOK_MODEQ (67) 72
    TOK_ARROW (68) 16
    TOK_AMP (69) 29 57
    TOK_STAR (70) 30 127 128
    TOK_LPAREN (71) 6 13 14 19 20 28 36 121 124 125 126 142 147 148 149 150 180 181 182 183 184 185 186 187 188
    TOK_RPAREN (72) 6 13 14 19 20 28 36 121 124 125 126 142 147 148 149 150 180 181 182 183 184 185 186 187 188
    TOK_LBRACKET (75) 12 122 123 143 144 145 146 161
    TOK_RBRACKET (76) 12 122 123 143 144 145 146 161
    TOK_SEMICOLON (77) 78 79 108 109 178 179 184 189 190 191 192
    TOK_COMMA (78) 20 22 76 85 113 131 136 152 156 157
    TOK_DOT (79) 15 162
    TOK_COLON (80) 114 115 169 170 171
    error (256)


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    primary_expression (81)
        on left: 1 2 3 4 5 6
        on right: 11
    constant (82)
        on left: 7 8 9
        on right: 2
    string (83)
        on left: 10
        on right: 3
    postfix_expression (84)
        on left: 11 12 13 14 15 16 17 18 19 20
        on right: 12 13 14 15 16 17 18 23
    argument_expression_list (85)
        on left: 21 22
        on right: 14 22
    unary_expression (86)
        on left: 23 24 25 26 27 28
        on right: 24 25 27 35 68
    unary_operator (87)
        on left: 29 30 31 32 33 34
        on right: 26
    cast_expression (88)
        on left: 35 36
        on right: 26 36 37 38 39 40
    multiplicative_expression (89)
        on left: 37 38 39 40
        on right: 38 39 40 41 42 43
    additive_expression (90)
        on left: 41 42 43
        on right: 42 43 44 45 46
    shift_expression (91)
        on left: 44 45 46
        on right: 45 46 47 48 49 50 51 52
    relational_expression (92)
        on left: 47 48 49 50 51 52
        on right: 48 49 50 51 52 53 54 55
    equality_expression (93)
        on left: 53 54 55
        on right: 54 55 56 57
    and_expression (94)
        on left: 56 57
        on right: 57 58 59
    exclusive_or_expression (95)
        on left: 58 59
        on right: 59 60 61
    inclusive_or_expression (96)
        on left: 60 61
        on right: 61 62 63
    logical_and_expression (97)
        on left: 62 63
        on right: 63 64 65
    logical_or_expression (98)
        on left: 64 65
        on right: 65 66
    conditional_expression (99)
        on left: 66
        on right: 67 77
    assignment_expression (100)
        on left: 67 68
        on right: 21 22 68 75 76 123 144 146 153
    assignment_operator (101)
        on left: 69 70 71 72 73 74
        on right: 68
    expression (102)
        on left: 75 76
        on right: 6 12 76 179 180 181 182 183 184 186 188 192
    constant_expression (103)
        on left: 77
        on right: 114 115 161 170
    declaration (104)
        on left: 78 79
        on right: 176 187 188 196 199 200
    declaration_specifiers (105)
        on left: 80 81 82 83
        on right: 78 79 80 82 132 133 134 197 198
    init_declarator_list (106)
        on left: 84 85
        on right: 79 85
    init_declarator (107)
        on left: 86 87
        on right: 84 85
    storage_class_specifier (108)
        on left: 88 89
        on right: 80 81
    type_specifier (109)
        on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 82 83 110 111
    struct_specifier (110)
        on left: 104 105
        on right: 103
    struct_declaration_list (111)
        on left: 106 107
        on right: 104 107
    struct_declaration (112)
        on left: 108 109
        on right: 106 107
    specifier_qualifier_list (113)
        on left: 110 111
        on right: 108 109 110 137 138
    struct_declarator_list (114)
        on left: 112 113
        on right: 109 113
    struct_declarator (115)
        on left: 114 115 116
        on right: 112 113
    declarator (116)
        on left: 118 119
        on right: 86 87 115 116 121 132 197 198
    $@1 (117)
        on left: 117
        on right: 118
    direct_declarator (118)
        on left: 120 121 122 123 124 125 126
        on right: 118 119 122 123 124 125 126
    pointer (119)
        on left: 127 128
        on right: 118 127 139 140
    parameter_type_list (120)
        on left: 129
        on right: 124 148 150
    parameter_list (121)
        on left: 130 131
        on right: 129 131
    parameter_declaration (122)
        on left: 132 133 134
        on right: 130 131
    identifier_list (123)
        on left: 135 136
        on right: 126 136
    type_name (124)
        on left: 137 138
        on right: 19 20 28 36
    abstract_declarator (125)
        on left: 139 140 141
        on right: 133 137 142
    direct_abstract_declarator (126)
        on left: 142 143 144 145 146 147 148 149 150
        on right: 139 141 145 146 149 150
    initializer (127)
        on left: 151 152 153
        on right: 86 154 155 156 157
    initializer_list (128)
        on left: 154 155 156 157
        on right: 19 20 151 152 156 157
    designation (129)
        on left: 158
        on right: 154 156
    designator_list (130)
        on left: 159 160
        on right: 158 160
    designator (131)
        on left: 161 162
        on right: 159 160
    statement (132)
        on left: 163 164 165 166 167 168
        on right: 169 170 171 177 180 181 182 183 184 185 186 187 188
    labeled_statement (133)
        on left: 169 170 171
        on right: 163
    compound_statement (134)
        on left: 172 173
        on right: 164 197 198
    block_item_list (135)
        on left: 174 175
        on right: 173 175
    block_item (136)
        on left: 176 177
        on right: 174 175
    expression_statement (137)
        on left: 178 179
        on right: 165 185 186 187 188
    selection_statement (138)
        on left: 180 181 182
        on right: 166
    iteration_statement (139)
        on left: 183 184 185 186 187 188
        on right: 167
    jump_statement (140)
        on left: 189 190 191 192
        on right: 168
    translation_unit (141)
        on left: 193 194
        on right: 0 194
    external_declaration (142)
        on left: 195 196
        on right: 193 194
    function_definition (143)
        on left: 197 198
        on right: 195
    declaration_list (144)
        on left: 199 200
        on right: 197 200


State 0

    0 $accept: • translation_unit $end

    TOK_INT       shift, and go to state 1
    TOK_SHORT     shift, and go to state 2
    TOK_FLOAT     shift, and go to state 3
    TOK_CHAR      shift, and go to state 4
    TOK_VOID      shift, and go to state 5
    TOK_BOOL      shift, and go to state 6
    TOK_BOOLEAN   shift, and go to state 7
    TOK_STRUCT    shift, and go to state 8
    TOK_INT8_T    shift, and go to state 9
    TOK_INT16_T   shift, and go to state 10
    TOK_INT32_T   shift, and go to state 11
    TOK_INT64_T   shift, and go to state 12
    TOK_SIGNED    shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_EXTERN    shift, and go to state 15
    TOK_STATIC    shift, and go to state 16

    declaration              go to state 17
    declaration_specifiers   go to state 18
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24


State 1

   93 type_specifier: TOK_INT •

    $default  reduce using rule 93 (type_specifier)


State 2

   92 type_specifier: TOK_SHORT •

    $default  reduce using rule 92 (type_specifier)


State 3

   94 type_specifier: TOK_FLOAT •

    $default  reduce using rule 94 (type_specifier)


State 4

   91 type_specifier: TOK_CHAR •

    $default  reduce using rule 91 (type_specifier)


State 5

   90 type_specifier: TOK_VOID •

    $default  reduce using rule 90 (type_specifier)


State 6

   95 type_specifier: TOK_BOOL •

    $default  reduce using rule 95 (type_specifier)


State 7

   96 type_specifier: TOK_BOOLEAN •

    $default  reduce using rule 96 (type_specifier)


State 8

  104 struct_specifier: TOK_STRUCT • TOK_IDENTIFIER TOK_BEGIN struct_declaration_list TOK_END
  105                 | TOK_STRUCT • TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 25


State 9

   97 type_specifier: TOK_INT8_T •

    $default  reduce using rule 97 (type_specifier)


State 10

   98 type_specifier: TOK_INT16_T •

    $default  reduce using rule 98 (type_specifier)


State 11

   99 type_specifier: TOK_INT32_T •

    $default  reduce using rule 99 (type_specifier)


State 12

  100 type_specifier: TOK_INT64_T •

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: TOK_SIGNED •

    $default  reduce using rule 101 (type_specifier)


State 14

  102 type_specifier: TOK_UNSIGNED •

    $default  reduce using rule 102 (type_specifier)


State 15

   88 storage_class_specifier: TOK_EXTERN •

    $default  reduce using rule 88 (storage_class_specifier)


State 16

   89 storage_class_specifier: TOK_STATIC •

    $default  reduce using rule 89 (storage_class_specifier)


State 17

  196 external_declaration: declaration •

    $default  reduce using rule 196 (external_declaration)


State 18

   78 declaration: declaration_specifiers • TOK_SEMICOLON
   79            | declaration_specifiers • init_declarator_list TOK_SEMICOLON
  197 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  198                    | declaration_specifiers • declarator compound_statement

    TOK_IDENTIFIER  shift, and go to state 26
    TOK_STAR        shift, and go to state 27
    TOK_LPAREN      shift, and go to state 28
    TOK_SEMICOLON   shift, and go to state 29

    init_declarator_list  go to state 30
    init_declarator       go to state 31
    declarator            go to state 32
    direct_declarator     go to state 33
    pointer               go to state 34


State 19

   80 declaration_specifiers: storage_class_specifier • declaration_specifiers
   81                       | storage_class_specifier •
